--- a/notebooks/demo_speeddating.ipynb
+++ b/notebooks/demo_speeddating.ipynb
@@ -15,18 +15,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -34,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,14 +37,14 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import classification_report\n",
     "from lime import lime_tabular\n",
-    "from calibrated_explanations import CalibratedAsLimeTabularExplainer, CalibratedExplainer\n",
+    "from calibrated_explanations import CalibratedAsLimeTabularExplainer, CalibratedExplainer, __version__\n",
     "import pandas as pd \n",
     "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +121,67 @@
        "      <th>race_o</th>\n",
        "      <th>samerace</th>\n",
        "      <th>importance_same_race</th>\n",
+       "      <th>importance_same_religion</th>\n",
+       "      <th>d_importance_same_race</th>\n",
+       "      <th>d_importance_same_religion</th>\n",
+       "      <th>field</th>\n",
+       "      <th>pref_o_attractive</th>\n",
+       "      <th>pref_o_sincere</th>\n",
+       "      <th>pref_o_intelligence</th>\n",
+       "      <th>pref_o_funny</th>\n",
+       "      <th>pref_o_ambitious</th>\n",
+       "      <th>pref_o_shared_interests</th>\n",
+       "      <th>d_pref_o_attractive</th>\n",
+       "      <th>d_pref_o_sincere</th>\n",
+       "      <th>d_pref_o_intelligence</th>\n",
+       "      <th>d_pref_o_funny</th>\n",
+       "      <th>d_pref_o_ambitious</th>\n",
+       "      <th>d_pref_o_shared_interests</th>\n",
+       "      <th>attractive_o</th>\n",
+       "      <th>sinsere_o</th>\n",
+       "      <th>intelligence_o</th>\n",
+       "      <th>funny_o</th>\n",
+       "      <th>ambitous_o</th>\n",
+       "      <th>shared_interests_o</th>\n",
+       "      <th>d_attractive_o</th>\n",
+       "      <th>d_sinsere_o</th>\n",
+       "      <th>d_intelligence_o</th>\n",
+       "      <th>d_funny_o</th>\n",
+       "      <th>d_ambitous_o</th>\n",
+       "      <th>d_shared_interests_o</th>\n",
+       "      <th>attractive_important</th>\n",
+       "      <th>sincere_important</th>\n",
        "      <th>...</th>\n",
+       "      <th>tv</th>\n",
+       "      <th>theater</th>\n",
+       "      <th>movies</th>\n",
+       "      <th>concerts</th>\n",
+       "      <th>music</th>\n",
+       "      <th>shopping</th>\n",
+       "      <th>yoga</th>\n",
+       "      <th>d_sports</th>\n",
+       "      <th>d_tvsports</th>\n",
+       "      <th>d_exercise</th>\n",
+       "      <th>d_dining</th>\n",
+       "      <th>d_museums</th>\n",
+       "      <th>d_art</th>\n",
+       "      <th>d_hiking</th>\n",
+       "      <th>d_gaming</th>\n",
+       "      <th>d_clubbing</th>\n",
+       "      <th>d_reading</th>\n",
+       "      <th>d_tv</th>\n",
+       "      <th>d_theater</th>\n",
+       "      <th>d_movies</th>\n",
+       "      <th>d_concerts</th>\n",
+       "      <th>d_music</th>\n",
+       "      <th>d_shopping</th>\n",
+       "      <th>d_yoga</th>\n",
+       "      <th>interests_correlate</th>\n",
+       "      <th>d_interests_correlate</th>\n",
+       "      <th>expected_happy_with_sd_people</th>\n",
+       "      <th>expected_num_interested_in_me</th>\n",
+       "      <th>expected_num_matches</th>\n",
+       "      <th>d_expected_happy_with_sd_people</th>\n",
        "      <th>d_expected_num_interested_in_me</th>\n",
        "      <th>d_expected_num_matches</th>\n",
        "      <th>like</th>\n",
@@ -156,7 +207,67 @@
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>27</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>20.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>7.0</td>\n",
@@ -180,7 +291,67 @@
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>27</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>20.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>7.0</td>\n",
@@ -204,7 +375,67 @@
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>27</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>20.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>7.0</td>\n",
@@ -228,7 +459,67 @@
        "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>27</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>20.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>6.0</td>\n",
@@ -252,7 +543,67 @@
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>27</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>20.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>6.0</td>\n",
@@ -270,38 +621,17 @@
        "</div>"
       ],
       "text/plain": [
-       "   wave  gender   age  age_o  d_age  d_d_age  race  race_o  samerace  \\\n",
-       "0   1.0       0  21.0   27.0    6.0        2     0       2         0   \n",
-       "1   1.0       0  21.0   22.0    1.0        0     0       2         0   \n",
-       "3   1.0       0  21.0   23.0    2.0        1     0       2         0   \n",
-       "4   1.0       0  21.0   24.0    3.0        1     0       3         0   \n",
-       "5   1.0       0  21.0   25.0    4.0        2     0       2         0   \n",
-       "\n",
-       "   importance_same_race  ...  d_expected_num_interested_in_me  \\\n",
-       "0                   2.0  ...                                0   \n",
-       "1                   2.0  ...                                0   \n",
-       "3                   2.0  ...                                0   \n",
-       "4                   2.0  ...                                0   \n",
-       "5                   2.0  ...                                0   \n",
-       "\n",
-       "   d_expected_num_matches  like  guess_prob_liked  d_like  d_guess_prob_liked  \\\n",
-       "0                       1   7.0               6.0       1                   1   \n",
-       "1                       1   7.0               5.0       1                   1   \n",
-       "3                       1   7.0               6.0       1                   1   \n",
-       "4                       1   6.0               6.0       1                   1   \n",
-       "5                       1   6.0               5.0       1                   1   \n",
-       "\n",
-       "   met  decision  decision_o  match  \n",
-       "0  0.0         1           0      0  \n",
-       "1  1.0         1           0      0  \n",
-       "3  0.0         1           1      1  \n",
-       "4  0.0         1           1      1  \n",
-       "5  0.0         0           1      0  \n",
+       "   wave  gender   age  age_o  ...  met  decision  decision_o  match\n",
+       "0   1.0       0  21.0   27.0  ...  0.0         1           0      0\n",
+       "1   1.0       0  21.0   22.0  ...  1.0         1           0      0\n",
+       "3   1.0       0  21.0   23.0  ...  0.0         1           1      1\n",
+       "4   1.0       0  21.0   24.0  ...  0.0         1           1      1\n",
+       "5   1.0       0  21.0   25.0  ...  0.0         0           1      0\n",
        "\n",
        "[5 rows x 122 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -374,14 +704,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken: 0.02099895477294922\n"
+      "Time taken: 0.010998249053955078\n",
+      "v0.0.20\n"
      ]
     }
    ],
@@ -391,19 +722,20 @@
     "                                    feature_names=df.columns, \n",
     "                                    categorical_features=categorical_features,\n",
     "                                    categorical_labels=categorical_labels)\n",
-    "print(f\"Time taken: {time.time()-tic}\")\n"
+    "print(f\"Time taken: {time.time()-tic}\")\n",
+    "print(__version__)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken: 167.67483592033386\n"
+      "Time taken: 137.97411680221558\n"
      ]
     }
    ],
@@ -416,15 +748,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken plotting counterfactual rules: 4.601996660232544\n",
-      "Time taken conjunctive rules: 197.96381878852844\n"
+      "Time taken plotting counterfactual rules: 5.561519145965576\n",
+      "Time taken conjunctive rules: 215.25555849075317\n"
      ]
     },
     {
@@ -438,7 +770,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken plotting counterfactual and conjunctive rules: 5.538518190383911\n"
+      "Time taken plotting counterfactual and conjunctive rules: 5.950294733047485\n"
      ]
     },
     {
@@ -936,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
