tested all notebooks

--- a/notebooks/demo_speeddating.ipynb
+++ b/notebooks/demo_speeddating.ipynb
@@ -15,18 +15,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -34,9 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\loftuw\\Anaconda3\\envs\\cp\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
        "[5 rows x 122 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -383,14 +383,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken: 0.0014994621276855468\n",
+      "Time taken: 0.0017999172210693359\n",
       "v0.0.24\n"
      ]
     }
@@ -407,14 +407,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken to generate counterfactual rules per instance: 10.169879126548768\n"
+      "Time taken to generate counterfactual rules per instance: 8.306402897834777\n"
      ]
     }
    ],
@@ -426,16 +426,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken plotting counterfactual rules per instance: 0.26869523525238037\n",
-      "Time taken constructing conjunctive rules per instance: 11.94990303516388\n",
-      "Time taken plotting counterfactual and conjunctive rules per instance: 0.3827000617980957\n"
+      "Time taken plotting counterfactual rules per instance: 0.202500057220459\n",
+      "Time taken constructing conjunctive rules per instance: 11.493456602096558\n",
+      "Time taken plotting counterfactual and conjunctive rules per instance: 0.35299489498138426\n"
      ]
     },
     {
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -748,11 +748,11 @@
     "y_proba = model.predict_proba(X_test)\n",
     "print('Performance of underlying model on test set')\n",
     "print(classification_report(y_test, y_pred, target_names=df[target].unique().astype(str)))\n",
-    "y_va = [int(va > 0.5) for va in counterfactual_explanation.predict['predict']]\n",
+    "y_va = [int(va > 0.5) for va in [e.prediction['predict'] for e in counterfactual_explanation.explanations]]\n",
     "print('Performance of calibration model on test set')\n",
     "print(classification_report(y_test, y_va, target_names=df[target].unique().astype(str)))\n",
     "print('target, model pred, model prob, va pred, va prob')\n",
-    "print(*zip(y_test, y_pred, y_proba[:,1], y_va, counterfactual_explanation.predict['predict']), sep='\\n')"
+    "print(*zip(y_test, y_pred, y_proba[:,1], y_va, [e.prediction['predict'] for e in counterfactual_explanation.explanations]), sep='\\n')"
    ]
   }
  ],
