--- a/notebooks/demo_binary_classification.ipynb
+++ b/notebooks/demo_binary_classification.ipynb
@@ -427,7 +427,7 @@
    "source": [
     "Uncertainty plots are similar to regular plots but also provide an uncertainty estimate for the impact of each feature. Here, the shaded area is the range of possible changes that each feature can result in.\n",
     "\n",
-    "To get uncertainty plots, simply call `plot_all` or `plot_factual` with the parameter `uncertainty=True`."
+    "To get uncertainty plots, simply call `plot_all` or `plot_explanation` with the parameter `uncertainty=True`."
    ]
   },
   {
@@ -539,7 +539,7 @@
     "#### Counterfactual explanations\n",
     "When using counterfactual explanations, the recommended `Discretizer` is the `EntropyDiscretizer`. The discretizer can be changed into `EntropyDiscretizer` by invoking `set_discretizer('entropy')`. Counterfactual explanations are extracted in the same way as regular and uncertainty explanations. The `EntropyDiscretizer` allows for more varied and precise counterfactual rules. The function `explain_counterfactual` will automatically assign recommended discretizer.\n",
     "\n",
-    "Once the explanations are extracted, we can visualize them using `plot_all` or `plot_counterfactual`. The counterfactual plot visualize the probability interval for the positive class (`Diabetic` in this example). The counterfactual rules indicate what the interval would have changed into had the feature values changed according to the rule condition."
+    "Once the explanations are extracted, we can visualize them using `plot_all` or `plot_explanation`. The counterfactual plot visualize the probability interval for the positive class (`Diabetic` in this example). The counterfactual rules indicate what the interval would have changed into had the feature values changed according to the rule condition."
    ]
   },
   {
