--- a/notebooks/demo_regression.ipynb
+++ b/notebooks/demo_regression.ipynb
@@ -370,7 +370,7 @@
     "\n",
     "Once the explanations are extracted, we can visualize them using various plots. The regular plot include an uncertainty estimate for the prediction and the weights of the most influential features. The shaded area is the the prediction interval with 95% confidence. The solid line in the middle of the shaded interval is the median in the conformal predictive distribution.\n",
     "\n",
-    "Regular plots are shown by calling the function `plot_all` or `plot_factual`, with `n_features_to_show` indicating the number of features to include (default 10), in order of importance. "
+    "Regular plots are shown by calling the function `plot_all` or `plot_explanation`, with `n_features_to_show` indicating the number of features to include (default 10), in order of importance. "
    ]
   },
   {
@@ -402,7 +402,7 @@
    "source": [
     "Uncertainty plots are similar to regular plots but also provide an uncertainty estimate for the impact of each feature. Here, the shaded area is the range of possible changes with the assigned confidence interval (here a two-sided interval with 95% confidence, as defined above). The solid line in the middle of the shaded interval is the median in the conformal predictive distribution.\n",
     "\n",
-    "To get uncertainty plots, simply call `plot_all` or `plot_factual` with the parameter `uncertainty=True`."
+    "To get uncertainty plots, simply call `plot_all` or `plot_explanation` with the parameter `uncertainty=True`."
    ]
   },
   {
