--- a/notebooks/quickstart.ipynb
+++ b/notebooks/quickstart.ipynb
@@ -128,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once we have the explanations, we can plot all of them using `plot_all`. Default, a regular plot, without uncertainty intervals included, is created. To include uncertainty intervals, change the parameter `uncertainty=True`. To plot only a single instance, the `plot_factual` function can be called, submitting the index of the test instance to plot."
+    "Once we have the explanations, we can plot all of them using `plot_all`. Default, a regular plot, without uncertainty intervals included, is created. To include uncertainty intervals, change the parameter `uncertainty=True`. To plot only a single instance, the `plot_explanation` function can be called, submitting the index of the test instance to plot."
    ]
   },
   {
@@ -201,7 +201,7 @@
     "factual_explanations.plot_all()\n",
     "factual_explanations.plot_all(uncertainty=True)\n",
     "\n",
-    "factual_explanations.plot_factual(0, uncertainty=True)"
+    "factual_explanations.plot_explanation(0, uncertainty=True)"
    ]
   },
   {
@@ -308,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Counterfactuals are also visualized using the `plot_all`. Plotting an individual counterfactual explanation is done using `plot_counterfactual`, submitting the index to plot. Adding or removing conjunctions is done as before. "
+    "Counterfactuals are also visualized using the `plot_all`. Plotting an individual counterfactual explanation is done using `plot_explanation`, submitting the index to plot. Adding or removing conjunctions is done as before. "
    ]
   },
   {
@@ -406,7 +406,7 @@
     "counterfactual_explanations.add_conjunctions().plot_all()\n",
     "counterfactual_explanations.remove_conjunctions().plot_all()\n",
     "\n",
-    "counterfactual_explanations.plot_counterfactual(0)"
+    "counterfactual_explanations.plot_explanation(0)"
    ]
   },
   {
