--- a/notebooks/demo_speeddating.ipynb
+++ b/notebooks/demo_speeddating.ipynb
@@ -15,9 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -25,15 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\loftuw\\Anaconda3\\envs\\cp\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "calibrated_explanations v0.1.0\n"
      ]
     }
    ],
@@ -48,12 +56,14 @@
     "from lime import lime_tabular\n",
     "from calibrated_explanations import CalibratedAsLimeTabularExplainer, CalibratedExplainer, __version__\n",
     "import pandas as pd \n",
-    "import time"
+    "import time\n",
+    "\n",
+    "print(f\"calibrated_explanations {__version__}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +311,7 @@
        "[5 rows x 122 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -383,15 +393,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken: 0.0011001825332641602\n",
-      "v0.0.24\n"
+      "Time taken: 0.0017998695373535156\n"
      ]
     }
    ],
@@ -401,20 +410,19 @@
     "                                    feature_names=df.columns, \n",
     "                                    categorical_features=categorical_features,\n",
     "                                    categorical_labels=categorical_labels)\n",
-    "print(f\"Time taken: {(time.time()-tic)/num_to_test}\")\n",
-    "print(__version__)\n"
+    "print(f\"Time taken: {(time.time()-tic)/num_to_test}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken to generate counterfactual rules per instance: 5.514962530136108\n"
+      "Time taken to generate counterfactual rules per instance: 7.418913412094116\n"
      ]
     }
    ],
@@ -426,16 +434,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken plotting counterfactual rules per instance: 0.1835108518600464\n",
-      "Time taken constructing conjunctive rules per instance: 7.7457839250564575\n",
-      "Time taken plotting counterfactual and conjunctive rules per instance: 0.2220141649246216\n"
+      "Time taken plotting counterfactual rules per instance: 0.21461541652679444\n",
+      "Time taken constructing conjunctive rules per instance: 9.132875657081604\n",
+      "Time taken plotting counterfactual and conjunctive rules per instance: 0.22681713104248047\n"
      ]
     },
     {
@@ -693,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
