--- a/notebooks/imbalanced_wrap.ipynb
+++ b/notebooks/imbalanced_wrap.ipynb
@@ -56,6 +56,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Before training, calibrating, predicting or explaining any instances, let us first look at the class distribution in the data set, to how imbalanced it is. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'numpy' has no attribute 'dict'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_49280/2827764017.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'number count of classes: \\n{np.dict(dataset.target.value_counts())}'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'fraction of positive instances: {np.min(dataset.target.value_counts())/len(y)}'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\loftuw\\Anaconda3\\envs\\cp\\lib\\site-packages\\numpy\\__init__.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(attr)\u001b[0m\n\u001b[0;32m    301\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mTester\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    302\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 303\u001b[1;33m             raise AttributeError(\"module {!r} has no attribute \"\n\u001b[0m\u001b[0;32m    304\u001b[0m                                  \"{!r}\".format(__name__, attr))\n\u001b[0;32m    305\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'numpy' has no attribute 'dict'"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'number count of classes: {np.array(dataset.target.value_counts())}')\n",
+    "print(f'fraction of positive instances: {np.min(dataset.target.value_counts())/len(y)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We now create our wrapper object, using a `RandomForestClassifier` as learner. "
    ]
   },
@@ -96,27 +126,6 @@
    "metadata": {},
    "source": [
     "We now fit our model using the proper training set."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-1    10923\n",
-      "1       260\n",
-      "Name: class, dtype: int64\n",
-      "[0 0 0 0 1 1 1 1]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(dataset.target.value_counts())\n",
-    "print(y_test)"
    ]
   },
   {
