bugfixes to experiments

--- a/evaluation/Classification stab rob.ipynb
+++ b/evaluation/Classification stab rob.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -80,9 +80,7 @@
      "text": [
       " & xGB & xGB & xGB & xGB & RF & RF & RF & RF \\\\\n",
       "Dataset & CE Stability & CCE Stability & CE Robustness & CCE Robustness  & CE Stability & CCE Stability& CE Robustness & CCE Robustness \\\\\n",
-      "pc1req & 0.08 & 0.08 & 0.08 & 0.08 & 0.19 & 0.19 & 0.19 & 0.19 \\\\\n",
-      "haberman & 0.06 & 0.06 & 0.06 & 0.06 & 0.14 & 0.14 & 0.14 & 0.14 \\\\\n",
-      "hepati & 0.19 & 0.21 & 0.19 & 0.21 & 0.46 & 0.52 & 0.45 & 0.52 \\\\\n"
+      "pc1req & 0.09 & 0.09 & 0.09 & 0.09 & 0.22 & 0.22 & 0.23 & 0.23 \\\\\n"
      ]
     }
    ],
@@ -117,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -126,9 +124,7 @@
      "text": [
       " & xGB & xGB & xGB & xGB & xGB & RF & RF & RF & RF & RF \\\\\n",
       "Dataset & CE Stability & CCE Stability & CE Robustness & CCE Robustness & Model Variance & CE Stability & CCE Stability & CE Robustness & CCE Robustness & Model Variance \\\\\n",
-      "pc1req & 0.0e+00 & 0.0e+00 & 0.0e+00 & 0.0e+00 & 6.6e-15 & 0.0e+00 & 0.0e+00 & 4.1e-03 & 4.1e-03 & 7.5e-04 \\\\\n",
-      "haberman & 0.0e+00 & 0.0e+00 & 0.0e+00 & 0.0e+00 & 5.0e-04 & 0.0e+00 & 0.0e+00 & 3.2e-03 & 3.2e-03 & 6.9e-04 \\\\\n",
-      "hepati & 0.0e+00 & 0.0e+00 & 0.0e+00 & 0.0e+00 & 5.6e-04 & 0.0e+00 & 0.0e+00 & 7.0e-03 & 7.0e-03 & 6.4e-04 \\\\\n"
+      "pc1req & 7.7e-35 & 7.7e-35 & 7.7e-35 & 7.7e-35 & 7.4e-15 & 1.8e-33 & 1.8e-33 & 2.0e-03 & 2.0e-03 & 6.4e-04 \\\\\n"
      ]
     }
    ],
@@ -191,8 +187,10 @@
     "        \n",
     "        # print(stab_rank)\n",
     "        # print(stab_val)\n",
-    "        print(f'{np.mean([t[1] if t[1] > 1e-10 else 0 for t in stab_val[\"ce\"]]):.1e} & {np.mean([t[1] if t[1] > 1e-10 else 0 for t in stab_val[\"cce\"]]):.1e} & ',end='')\n",
-    "        print(f'{np.mean([t[1] if t[1] > 1e-10 else 0 for t in rob_val[\"ce\"]]):.1e} & {np.mean([t[1] if t[1] > 1e-10 else 0 for t in rob_val[\"cce\"]]):.1e} & ',end='')\n",
+    "        print(f'{np.mean([t[1] if t[1] > 1e-20 else 0 for t in stab_val[\"ce\"]]):.1e} & {np.mean([t[1] if t[1] > 1e-20 else 0 for t in stab_val[\"cce\"]]):.1e} & ',end='')\n",
+    "        print(f'{np.mean([t[1] if t[1] > 1e-20 else 0 for t in rob_val[\"ce\"]]):.1e} & {np.mean([t[1] if t[1] > 1e-20 else 0 for t in rob_val[\"cce\"]]):.1e} & ',end='')\n",
+    "        # print(f'{np.mean([t[1] for t in stab_val[\"ce\"]]):.1e} & {np.mean([t[1] for t in stab_val[\"cce\"]]):.1e} & ',end='')\n",
+    "        # print(f'{np.mean([t[1] for t in rob_val[\"ce\"]]):.1e} & {np.mean([t[1] for t in rob_val[\"cce\"]]):.1e} & ',end='')\n",
     "        print(f'{np.mean(rob_proba):.1e}', end='')\n",
     "    print(' \\\\\\\\')"
    ]
